unpackaged/main/default/objects/Campaign/fields/Active_in_Expensify_Until__c.field-meta.xml
<CustomField>
    <fullName>Active_in_Expensify_Until__c</fullName>
    <label>Active in Expensify Until</label>
    <type>Date</type>
</CustomField>