unpackaged/main/default/objects/Campaign/fields/Event_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Local_Time__c</fullName>
    <label>Event Local Time</label>
    <type>Time</type>
</CustomField>