unpackaged/main/default/objects/Campaign/fields/Event_Profit__c.field-meta.xml
<CustomField>
    <fullName>Event_Profit__c</fullName>
    <formula>BudgetedCost -  ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>