unpackaged/main/default/objects/Campaign/fields/Expensify_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Event_Name__c</fullName>
    <label>Expensify Event Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>