unpackaged/main/default/objects/Campaign/fields/Internal_Staff_1__c.field-meta.xml
<CustomField>
    <fullName>Internal_Staff_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Staff 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>