unpackaged/main/default/objects/Campaign/fields/Total_MDF_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_MDF_Allocated__c</fullName>
    <label>Total MDF Allocated</label>
    <summarizedField>MDF_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>MDF_Allocation__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>