unpackaged/main/default/objects/Campaign/listViews/Campaigns_this_Quarter.listView-meta.xml
<ListView>
    <fullName>Campaigns_this_Quarter</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>7/1/2024</value>
    </filters>
    <label>Campaigns this Quarter</label>
</ListView>